<resources>
    <string name="app_name">Explorin</string>
    <string name="find_hidden_gems">Find your hidden gems</string>
    <string name="text_onboarding">Solo backpacker? Tourist? First time traveler? Anda selalu diterima di sini.</string>
    <string name="adventurer">Adventurer</string>
    <string name="mulai_petualanganmu">Mulai Petualanganmu</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="please_login">Silakan login untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="havent_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="please_register">Silakan register untuk membuat akun</string>
    <string name="name">Nama Lengkap</string>
    <string name="login">Masuk</string>
    <string name="have_account">Sudah punya akun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home">Beranda</string>
    <string name="tab_account">Akun</string>
    <string name="tab_favorite">Favorit</string>
    <string name="tab_search">Pencarian</string>
    <string name="where_to_go">Mau ke mana?</string>
    <string name="populer">Populer</string>
    <string name="city">Kota</string>
    <string name="stars_rate">4.8</string>
    <string name="string_parking">Parking Area</string>
    <string name="empty_state_title">Tidak Ditemukan</string>
    <string name="empty_state_subtitle">Wahh, data yang kamu cari tidak ada nih</string>
    <string name="error_state_title">Terjadi Kesalahan</string>
    <string name="error_state_subtitle">Wahh, sepertinya ada kesalahan. \nSilahkan akses yang lain dulu ya</string>
    <string name="action_try_again">Coba Lagi</string>
    <string name="action_loading">Memuat...</string>
    <string name="personal_information">Informasi Personal</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet consectetur. Magna scelerisque tortor lacus id lectus scelerisque sit massa. Accumsan tellus cursus habitant phasellus in sit ultricies. Nisl lobortis cursus nisl hac ac pellentesque eu mi. Etiam purus sed risus vulputate tincidunt nisi vitae.</string>
    <string name="facility">Fasilitas</string>
    <string name="photos">Galeri Foto</string>
    <string name="location">Lokasi</string>
    <string name="see_360">Lihat 360 View</string>
    <string name="change_photo">Ubah Foto</string>
    <string name="username">Username</string>
    <string name="handphone">No. Handphone</string>
    <string name="domicile">Kota Domisili</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="name_none">Nama tidak boleh kosong</string>
    <string name="email_none">Email tidak boleh kosong</string>
    <string name="email_format">Format email salah</string>
    <string name="password_format">Kata sandi minimal harus 8 karakter</string>
    <string name="email_taken">Email yang anda masukkan sudah digunakan</string>
    <string name="see_all">See All</string>
    <string name="password_none">Kata sandi tidak boleh kosong</string>
    <string name="login_invalid">Login gagal. Periksa kembali email dan password kamu.</string>
    <string name="register_invalid">Register gagal. Periksa kembali nama, email atau password kamu.</string>
    <string name="action_logout">Logout</string>
    <string name="title_logout_question">Keluar dari akun?</string>
    <string name="action_logout_confirm">Ya, keluar</string>
    <string name="action_no">Tidak</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="category">Kategori</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="find_buddies">Cari teman perjalanan</string>
    <string name="people_join">Orang</string>
    <string name="join">Gabung</string>
    <string name="message">Kirimi Pesan</string>
    <string name="enter_message">Tulis Pesan</string>
    <string name="send">Kirim</string>
    <string name="people_joined">%d orang telah bergabung</string>
    <string name="find_your_buddies">Cari Buddies-mu</string>
    <string name="join_description">Silahkan tunggu konfirmasi dari calon Buddies-mu</string>
    <string name="ok">Ok</string>
    <string name="wait">Bergabung dengan Buddies?</string>
</resources>