<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_bg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/MainCard">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MB24" />

        <TextView
            android:id="@+id/tv_please_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_register"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/LR12"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_please_register"
            android:layout_marginTop="30dp"
            style="@style/LR14"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_name"
            style="@style/TextInput"
            android:layout_marginTop="5dp"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/primary_500"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/text_hint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name"
            android:layout_marginTop="20dp"
            style="@style/LR14"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email"
            style="@style/TextInput"
            android:layout_marginTop="5dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/primary_500"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/text_hint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            android:layout_marginTop="20dp"
            style="@style/LR14"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password"
            style="@style/TextInput"
            android:layout_marginTop="5dp"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/primary_500"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/text_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/text_hint"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/ButtonStyle"
            android:backgroundTint="@color/primary_500"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/have_acc"
            android:layout_marginTop="40dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/have_acc"
            style="@style/LR12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/have_account"
            app:layout_constraintTop_toTopOf="@id/go_login"
            app:layout_constraintBottom_toBottomOf="@id/go_login"
            app:layout_constraintEnd_toStartOf="@id/go_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/go_login"
            style="@style/LR12"
            android:textStyle="bold"
            android:textColor="@color/primary_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/have_acc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>