<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/MainCard">

        <TextView
            android:id="@+id/heading_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/string_expand_your_exploration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/LSB16" />

        <TextView
            android:id="@+id/heading_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adventurer"
            android:textColor="@color/primary_500"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/heading_1"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/MB36"
            />

        <TextView
            android:id="@+id/text_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_onboarding"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/heading_2"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/LR16"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/btn_start"
            app:layout_constraintTop_toTopOf="@id/btn_start"
            app:layout_constraintBottom_toBottomOf="@id/btn_start"
            android:layout_marginEnd="15dp"
            style="@style/LR14"
            android:text="@string/mulai_petualanganmu"/>

        <ImageButton
            android:id="@+id/btn_start"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_detail"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_circle"
            android:src="@drawable/ic_start"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>